examples/test/testpolicy12931.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12931
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key33: value9
      key5: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value39
          key32: value39
          key47: value24
      podSelector:
        matchLabels:
          key0: value24
          key26: value15
          key3: value20
